- refactor layout for project creation flow - create grid with multiple columns for displaying repos - create grid with single column for project deployment component - fix responsiveness of app layout children container on mobile

--- a/src/migrator-management-canister-frontend/src/components/AppLayout/AppLayout.css
+++ b/src/migrator-management-canister-frontend/src/components/AppLayout/AppLayout.css
@@ -36,6 +36,19 @@
   overflow-y: auto;
 }
 
+@media (max-width: 480px) {
+  .app-layout-children-container {
+    max-width: 100vw;
+    width: 100%;
+    padding-top: 8rem;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    height: 100vh;
+    min-height: 0;
+    overflow-y: auto;
+  }
+}
 /* 
 .bottom-nav-group {
   margin-top: auto;
