--- a/src/migrator-management-canister-frontend/src/components/ProjectCreationFlow/ProjectCreationFlow.css
+++ b/src/migrator-management-canister-frontend/src/components/ProjectCreationFlow/ProjectCreationFlow.css
@@ -4,14 +4,23 @@
   padding: 0 20px;
   position: relative;
   /* overflow-y: auto; */
+  margin-top: -2rem;
   z-index: 1;
   width: 100%;
 }
 
+@media (max-width: 480px) {
+  .project-creation-flow {
+    max-width: 1200px;
+    padding: 0 2px;
+    margin-top: -2rem;
+  }
+}
 .creation-tabs-container {
   position: relative;
   z-index: 2;
   margin-bottom: 24px;
+  width: 100%;
 }
 
 .creation-tabs {
